# project-dlang

./: .gitignore  Cargo.toml
examples/: memory_demo.dlang
src/: codegen.rs  lexer.rs  main.rs  parser.rs  typechecker.rs
src/stdlib/: io.rs  memory.rs  mod.rs  string_utils.rs
src/stdlib/src/: collections.rs  io.rs  math.rs  string.rs  thread.rs  time.rs
std/: io.dlang
std/memory/allocator/: page.dlang
std/memory/debug/: leak_detector.dlang
std/memory/gc/: generational.dlang
std/memory/pool/: fixed_size.dlang
std/memory/smart_ptr/: rc.dlang
tests/memory/: stress_test.dlang
